--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -151,7 +151,8 @@
     "hit": "C'est un coup.",
     "criticalHit": "C'est un coup critique!",
     "nameFainted": "{0} s'est évanouie.",
-    "nameProtected": "{0}  s'est protégée.",
+    "nameRetreated": "{0} s'est retirée.",
+    "nameProtected": "{0} s'est protégée.",
     "becameHex": "{0} s'est **{1}**.",
     "hexFailed": "L'effet a échoué.",
     "statIncreased": "**{1}** de {0} a augmenté.",
