Some minor fixes

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -82,12 +82,12 @@
     "noArtifactDescr": "Ne fait rien",
     "amulet": "Amulette maudite",
     "amuletDescr": "**Inverse** les sortilèges reçus",
+    "armor": "Armure non ajustée",
+    "armorDescr": "Augmente **l'attaque** mais limite les sorts",
     "charm": "Charme de protection",
     "charmDescr": "Augmente **défense** à faible PV",
     "cornucopia": "Corne d'abondance",
     "cornucopiaDescr": "**Guérit** à chaque tour",
-    "corset": "Corset non ajusté",
-    "corsetDescr": "Augmente **l'attaque** mais limite les sorts",
     "crystal": "Cristal météo",
     "crystalDescr": "**Prolonge** les sorts météorologiques",
     "grimoire": "Ancien Grimoire",
