Added rewards to daily missions

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -29,8 +29,8 @@
     "overview": "Aperçu",
     "training": "Entraînement",
     "tutorial": "Didacticiel",
-    "hideChart": "Afficher le tableau",
-    "showChart": "Masquer le tableau",
+    "hideChart": "Masquer le tableau",
+    "showChart": "Afficher le tableau",
     
     "back": "Retour",
     "cancel": "Annuler",
@@ -206,10 +206,11 @@
     "missions": "Missions",
     "dailyQuests": "Quêtes quotidiennes",
     "milestones": "Jalons",
-    "winUsingMission": "Gagnez avec {0} {1} fois",
+    "winUsingMission": "Gagnez avec {0}",
     "completeMission": "Terminez toutes les quêtes",
     "fightMission": "Combattez {0} fois",
-    "winMission": "Gagnez {0} fois d'affilée",
+    "winMission": "Gagnez {0} fois",
+    "winStreakMission": "Gagnez {0} fois d'affilée",
     "winAliveMission": "Gagnez sans perdre",
     "hexMission": "Utilisez les sortilèges",
     "weatherMission": "Utilisez les effets météo",
