"Fixed" icon issue

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -163,7 +163,7 @@
     "spells": "Sorts",
     "spellsDescr": "Utilisez la magie pour combattre",
     
-    "noHexes": "Pas d'sortilèges",
+    "noHexes": "Pas de sortilèges",
     "attackBoostDescr": "Augmente **l'attaque**",
     "attackDropDescr": "Diminue **l'attaque**",
     "defenseBoostDescr": "Augmente **la défense**",
