Added new missions

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -74,13 +74,15 @@
     "dailyQuests": "Quêtes quotidiennes",
     "milestones": "Jalons",
     "winUsingMission": "Gagnez avec {0}",
+    "useArtifactMission": "Combattez avec 1 artefact",
     "completeMission": "Terminez toutes les quêtes",
     "fightMission": "Combattez {0} fois",
     "winMission": "Gagnez {0} fois",
     "winStreakMission": "Gagnez {0} fois d'affilée",
     "winAliveMission": "Gagnez sans perdre",
-    "hexMission": "Utilisez les sortilèges",
     "weatherMission": "Utilisez les effets météo",
+    "hexMission": "Utilisez les sortilèges",
+    "artifactMission": "Utilisez les artefacts",
     "fightElementMission": "Combattez avec 1 élément",
     "collect": "Collecter",
     
