Changed sorting in Overview

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -1,7 +1,10 @@
 {
     "fr": "Français",
     
-    "allElements": "Tous Éléments",
+    "unsorted": "Non trié",
+    "name": "Nom",
+    "element": "Élément",
+    
     "aether": "Éther",
     "decay": "Carie",
     "electric": "Électrik",
