Added new outfit

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -23,6 +23,7 @@
 
     "catgirl": "Fille chat",
     "highelf": "Haut-Elfe",
+    "kimono": "Kimono",
     "qipao": "Qipao",
     
     "alchemist": "Alchimiste",
