Added progress display while loading

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -75,7 +75,8 @@
     "textSpeed": "Vitesse du texte",
     "slow": "Lente",
     "normal": "Normale",
-    "fast": "Rapide",
+    "fast": "Vite",
+    "rapid": "Rapide",
     "teams": "Covens",
     "artifacts": "Artefacts",
     "limited": "Limité",
