Added an outfit back

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -27,7 +27,7 @@
     "default": "Défaut",
 
     "catgirl": "Fille chat",
-    "highelf": "Haut-Elfe",
+    "icequeen": "Reine d'hiver",
     "kimono": "Kimono",
     "qipao": "Qipao",
     
