Added new artifact

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -171,13 +171,15 @@
     "sevenLeague": "Bottes de sept lieues",
     "sevenLeagueDescr": "Augmente **agilité** à faible PV",
     "shield": "Bouclier légendaire",
-    "shieldDescr": "Seule une certaine magie le contourne",
+    "shieldDescr": "Seule une **certaine magie** le contourne",
     "sword": "Épée à double tranchant",
     "swordDescr": "Augmente **l'attaque**, les attaques ont du recul",
     "talaria": "Sandales ailées",
     "talariaDescr": "**Échange** après avoir été touché",
     "talisman": "Talisman magique",
     "talismanDescr": "Renvoie **les sortilèges**",
+    "thread": "Fil rouge du destin",
+    "threadDescr": "**Liée** à l'adversaire",
     "wand": "Baguette de Sureau",
     "wandDescr": "Augmente **attaque** à faible PV",
     
