Added a new artifact

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -156,6 +156,8 @@
     "cornucopiaDescr": "**Guérit** à chaque tour",
     "crystal": "Cristal météo",
     "crystalDescr": "**Prolonge** les sorts météorologiques",
+    "fetish": "Fétiche ivoire",
+    "fetishDescr": "**Attaque** augmentée avec sortilège négatif",
     "grimoire": "Ancien Grimoire",
     "grimoireDescr": "**Supprime** les sortilèges après l'échange",
     "helmet": "Casque épineux",
