--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -150,6 +150,8 @@
     "amuletDescr": "**Inverse** les sortilèges reçus",
     "armor": "Armure non ajustée",
     "armorDescr": "Augmente **l'attaque** mais limite les sorts",
+    "bow": "Arc d'argent",
+    "bowDescr": "**Précision** accrue face à un adversaire faible",
     "charm": "Charme de protection",
     "charmDescr": "Augmente **défense** à faible PV",
     "cornucopia": "Corne d'abondance",
