Removed unnecessary translations

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -25,11 +25,7 @@
     
     "info": "Info",
     "default": "Défaut",
-
-    "catgirl": "Fille chat",
-    "icequeen": "Reine d'hiver",
-    "kimono": "Kimono",
-    "qipao": "Qipao",
+    "icequeen": "Reine d'hiver"
     
     "alchemist": "Alchimiste",
     "enchantress": "Enchanteresse",
