Improved info presentation for targeting fighters
Improved info presentation for multi fights
Added translations
Fighters reset last spell

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -251,6 +251,7 @@
     "swappedHexes": "Les sortilèges ont été échangés.",
     "nameProvoked": "{0} a été provoquée.",
     "swappedArtifacts": "Les artefacts ont été échangés.",
+    "nameTargeted": "{0} est devenue le centre d'attention.",
     
     "superEffective": "Super efficace",
     "veryEffective": "Très efficace",
