Added new artifact

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -173,6 +173,8 @@
     "ringDescr": "Protège du **K.O.** quand plein PV",
     "sevenLeague": "Bottes de sept lieues",
     "sevenLeagueDescr": "Augmente **agilité** à faible PV",
+    "shield": "Bouclier légendaire",
+    "shieldDescr": "Protège des effets **secondaires**",
     "sword": "Épée à double tranchant",
     "swordDescr": "Augmente **l'attaque**, les attaques ont du recul",
     "talaria": "Sandales ailées",
