Added and changed translations

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -235,15 +235,35 @@
     "nameFainted": "{0} s'est évanouie.",
     "nameRetreated": "{0} s'est retirée.",
     "nameProtected": "{0} s'est protégée.",
-    "becameHex": "{0} s'est **{1}**.",
-    "hexFailed": "L'effet a échoué.",
-    "statIncreased": "**{1}** de {0} a augmenté.",
-    "statDecreased": "**{1}** de {0} a diminué.",
+    "hexFailed": "L'enchantement a échoué.",
+    "hexResisted": "{0} a résisté à l'enchantement.",
+    "attackBoost": "**Attaque** de {0} a augmenté.",
+    "defenseBoost": "**Défense** de {0} a augmenté.",
+    "agilityBoost": "**Agilité** de {0} a augmenté.",
+    "precisionBoost": "**Précision** de {0} a augmenté.",
+    "resistanceBoost": "**Résistance** de {0} a augmenté.",
+    "attackDrop": "**Attaque** de {0} a diminué.",
+    "defenseDrop": "**Défense** de {0} a diminué.",
+    "agilityDrop": "**Agilité** de {0} a diminué.",
+    "precisionDrop": "**Précision** de {0} a diminué.",
+    "resistanceDrop": "**Résistance** de {0} a diminué.",
+    "poisoned": "{0} s'est empoisonnée.",
+    "healed": "{0} s'est guérie.",
+    "confused": "{0} s'est confondue.",
+    "bombed": "{0} s'est bombardée.",
+    "blessed": "{0} s'est bénie.",
+    "blocked": "{0} s'est bloquée.",
+    "chained": "{0} s'est enchaînée.",
+    "invigorated": "{0} s'est revigorée.",
+    "exhausted": "{0} s'est épuisée.",
+    "restricted": "{0} s'est restreinte.",
+    "doomed": "{0} s'est condamnée.",
     "weatherChanged": "Le temps a changé en {0}.",
     "weatherFailed": "Le temps n'a pas changé.",
     "swapWith": "{0} a été échangé avec {1}.",
     "swapFailed": "{0} n'a pas pu être échangée.",
-    "fail": "Ça a échoué!",
+    "spellFailed": "Ça a échoué!",
+    "spellProtected": "{0} était protégée par son bouclier.",
     "lostHP": "{0} a perdue HP.",
     "gainedHP": "{0} a gagnée HP.",
     "healFailed": "La guérison a échoué.",
@@ -261,18 +281,6 @@
     "effective": "Efficace",
     "notVeryEffective": "Pas très efficace",
     "notEffective": "Pas efficace",
-    
-    "poisoned": "empoisonnée",
-    "healed": "guérie",
-    "confused": "confondue",
-    "bombed": "bombardée",
-    "blessed": "bénie",
-    "blocked": "bloquée",
-    "chained": "enchaînée",
-    "invigorated": "revigorée",
-    "exhausted": "épuisée",
-    "restricted": "restreinte",
-    "doomed": "condamnée",
     
     "victory": "Victoire",
     "victoryMsg": "Votre équipe a remporté la victoire!",
