Replaced an artifact with a new one

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -150,8 +150,6 @@
     "amuletDescr": "**Inverse** les sortilèges reçus",
     "armor": "Armure non ajustée",
     "armorDescr": "Augmente **l'attaque** mais limite les sorts",
-    "bow": "Arc d'argent",
-    "bowDescr": "**Précision** accrue face à un adversaire faible",
     "charm": "Charme de protection",
     "charmDescr": "Augmente **défense** à faible PV",
     "cornucopia": "Corne d'abondance",
@@ -162,6 +160,8 @@
     "fetishDescr": "**Attaque** augmentée avec sortilège négatif",
     "grimoire": "Ancien Grimoire",
     "grimoireDescr": "**Supprime** les sortilèges après l'échange",
+    "hat": "Chapeau de sorcière",
+    "hatDescr": "Les sorts **spéciaux** ont priorité",
     "helmet": "Casque épineux",
     "helmetDescr": "Blesse l'agresseur",
     "incense": "Encens fort",
