Added two new elements

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -11,7 +11,8 @@
     "element": "Élément",
     
     "aether": "Éther",
-    "decay": "Carie",
+    "bug": "Insecte",
+    "digital": "Numérique",
     "electric": "Électrik",
     "fire": "Feu",
     "ground": "Sol",
@@ -19,6 +20,7 @@
     "metal": "Métal",
     "plant": "Plante",
     "rock": "Roche",
+    "time": "Temps",
     "water": "Eau",
     "wind": "Vent",
     "wood": "Bois",
@@ -221,12 +223,20 @@
     
     "clearSkies": "Ciel clair",
     "noWeather": "Aucun effet",
-    "snowstormDescr": "Augmente **glace** & **vent**",
-    "sunnyDayDescr": "Augmente **feu** & **bois**",
+    "blizzardDescr": "Augmente **glace** & **vent**",
+    "sunnyDayDescr": "Augmente **feu** & **plante**",
     "overcastSkyDescr": "Augmente **éther** & **carie**",
-    "mysticWeatherDescr": "Augmente **électrik** & **métal**",
-    "lightRainDescr": "Augmente **plante** & **eau**",
+    "mysticWeatherDescr": "Augmente **numérique** & **temps**",
+    "lightRainDescr": "Augmente **bois** & **eau**",
     "sandstormDescr": "Augmente **sol** & **roche**",
+    "thunderstormDescr": "Augmente **électrik** & **métal**",
+    "magneticStormDescr": "Renverse le **test élémentaire**",
+    "denseFogDescr": "Ignore le **test élémentaire**",
+    "heavyStormDescr": "Renverse le **test d'agilité**",
+    "extremeHeatDescr": "Permute **attaque** & **défense**",
+    "volcanicStormDescr": "Ignore **les artefacts**",
+    "springWeatherDescr": "Prévient **les enchantements**",
+    "forecastErrorDescr": "Perpétue **les enchantements**",
     
     "hpBar": "{0}/{1}PV",
     "fightBegin": "Que le combat commence!",
