Changed hex name

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -214,7 +214,7 @@
     "confusedDescr": "Randomise le sort",
     "bombedDescr": "Diminue PV après l'expiration de l'sortilège",
     "blessedDescr": "Protège contre les sortilèges **négatifs**",
-    "blockedDescr": "Empêche la guérison",
+    "cursedDescr": "Empêche la guérison",
     "chainedDescr": "Empêche l'échange",
     "invigoratedDescr": "Diminue **le coût**",
     "exhaustedDescr": "Augmente **le coût**",
@@ -263,7 +263,7 @@
     "confused": "{0} s'est confondue.",
     "bombed": "{0} s'est bombardée.",
     "blessed": "{0} s'est bénie.",
-    "blocked": "{0} s'est bloquée.",
+    "cursed": "{0} devenue maudite.",
     "chained": "{0} s'est enchaînée.",
     "invigorated": "{0} s'est revigorée.",
     "exhausted": "{0} s'est épuisée.",
