Added new artifact

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -150,7 +150,7 @@
     "noArtifactDescr": "Ne fait rien",
     "amulet": "Amulette maudite",
     "amuletDescr": "**Inverse** les sortilèges reçus",
-    "armor": "Armure non ajustée",
+    "armor": "Plate armure",
     "armorDescr": "Augmente **l'attaque** mais limite les sorts",
     "charm": "Charme de protection",
     "charmDescr": "Augmente **défense** à faible PV",
@@ -160,8 +160,8 @@
     "crystalDescr": "**Prolonge** les sorts météorologiques",
     "fetish": "Fétiche ivoire",
     "fetishDescr": "**Attaque** augmentée avec sortilège négatif",
-    "grimoire": "Ancien Grimoire",
-    "grimoireDescr": "**Supprime** les sortilèges après l'échange",
+    "talisman": "Petit talisman",
+    "talismanDescr": "**Supprime** les sortilèges après l'échange",
     "hat": "Chapeau pointu",
     "hatDescr": "Les sorts **spéciaux** ont priorité",
     "helmet": "Casque épineux",
@@ -174,20 +174,22 @@
     "potionDescr": "**Guérit** 25% sur à faible PV",
     "ring": "Anneau béni",
     "ringDescr": "Protège du **K.O.** quand plein PV",
-    "sevenLeague": "Bottes de sept lieues",
-    "sevenLeagueDescr": "Augmente **agilité** à faible PV",
+    "boots": "Bottes de sept lieues",
+    "bootsDescr": "Augmente **agilité** à faible PV",
     "shield": "Bouclier légendaire",
     "shieldDescr": "Protège des effets **secondaires**",
     "sword": "Épée à double tranchant",
     "swordDescr": "Augmente **l'attaque**, les attaques ont du recul",
     "talaria": "Sandales ailées",
     "talariaDescr": "**Échange** après avoir été touché",
-    "talisman": "Talisman magique",
-    "talismanDescr": "Renvoie **les sortilèges**",
+    "mirror": "Miroir magique",
+    "mirrorDescr": "Renvoie **les sortilèges**",
     "thread": "Fil rouge du destin",
     "threadDescr": "**Liée** à l'adversaire",
     "wand": "Baguette de Sureau",
     "wandDescr": "Augmente **attaque** à faible PV",
+    "grimoire": "Ancien Grimoire",
+    "grimoireDescr": "Invoquer l'élémentaire **météo**",
     
     "information": "Information",
     "informationDescr": "Recevoir des informations sur le combat",
