Added turns for artifact effects

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -150,7 +150,7 @@
     "noArtifactDescr": "Ne fait rien",
     "amulet": "Amulette maudite",
     "amuletDescr": "**Inverse** les sortilèges reçus",
-    "armor": "Plate armure",
+    "armor": "Armure décorative",
     "armorDescr": "Augmente **l'attaque** mais limite les sorts",
     "charm": "Charme de protection",
     "charmDescr": "Augmente **défense** à faible PV",
@@ -180,8 +180,8 @@
     "shieldDescr": "Protège des effets **secondaires**",
     "sword": "Épée à double tranchant",
     "swordDescr": "Augmente **l'attaque**, les attaques ont du recul",
-    "talaria": "Sandales ailées",
-    "talariaDescr": "**Échange** après avoir été touché",
+    "sandals": "Sandales ailées",
+    "sandalsDescr": "**Échange** après avoir été touché",
     "mirror": "Miroir magique",
     "mirrorDescr": "Renvoie **les sortilèges**",
     "thread": "Fil rouge du destin",
@@ -222,6 +222,7 @@
     "exhaustedDescr": "Augmente **le coût**",
     "restrictedDescr": "Seul le dernier sort peut être utilisé",
     "doomedDescr": "Pas de PV après l'expiration de l'sortilège",
+    "tauntedDescr": "Seuls les sorts **d'attaque** sont utilisables",
     
     "clearSkies": "Ciel clair",
     "noWeather": "Aucun effet",
@@ -271,6 +272,7 @@
     "exhausted": "{0} s'est épuisée.",
     "restricted": "{0} s'est restreinte.",
     "doomed": "{0} s'est condamnée.",
+    "taunted": "{0} a été raillée.",
     "weatherChanged": "Le temps a changé en {0}.",
     "weatherFailed": "Le temps n'a pas changé.",
     "swapWith": "{0} a été échangé avec {1}.",
