Refactored mission system

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -86,7 +86,7 @@
     "dailyQuests": "Quêtes quotidiennes",
     "milestones": "Jalons",
     "winUsingMission": "Gagnez avec {0}",
-    "useArtifactMission": "Combattez avec 1 artefact",
+    "useArtifactMission": "Combattez avec un artefact",
     "completeMission": "Terminez toutes les quêtes",
     "fightMission": "Combattez {0} fois",
     "winMission": "Gagnez {0} fois",
