Crystal artifact renamed

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -146,7 +146,7 @@
     "charmDescr": "Augmente **défense** à faible PV",
     "cornucopia": "Corne d'abondance",
     "cornucopiaDescr": "**Guérit** à chaque tour",
-    "crystal": "Cristal météo",
+    "crystal": "Cristal brillant",
     "crystalDescr": "**Prolonge** les sorts météorologiques",
     "fetish": "Fétiche ivoire",
     "fetishDescr": "**Attaque** augmentée avec sortilège négatif",
